<add>: column descripcion in peliculas migation and more metods <fix>: deprecated metods

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "rootDir": "./",
     "baseUrl": "./",
     "sourceMap": true,
+    "module": "commonjs",
     "paths": {
       "App/*": [
         "./app/*"
@@ -24,7 +25,8 @@
       ],
       "Database/*": [
         "./database/*"
-      ]
+      ],
+      
     },
     "types": [
       "@adonisjs/core",
