--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@adonisjs/mail": "^8.2.1",
     "@adonisjs/repl": "^3.1.11",
     "@adonisjs/view": "^6.2.0",
+    "clipboardy": "^2.3.0",
+    "get-stream": "^8.0.1",
     "luxon": "^3.4.4",
     "mysql2": "^3.9.2",
     "proxy-addr": "^2.0.7",
